# telegram_bot_aio

./: README.md  env_example  pyproject.toml
bot/: config.py  loader.py  run_bot.py
bot/filters/: game_filter.py
bot/games/: config_game.py  guess_number.py
bot/handlers/: command_handler.py  echo_handlers.py
bot/lexicon/: games_lexicon.py
bot/states/: games_state.py
tests/: test_handlers.py
