[tool.poetry]
name = "telegaiobot"
version = "0.1"
description = ""
authors = ["prStudentka"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.5.0"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
poetry = "^1.8.3"


[tool.poetry.scripts]
start = "bot.scripts.bot_echo:main"


[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
